--- a/ios-clientes/Base.lproj/Main.storyboard
+++ b/ios-clientes/Base.lproj/Main.storyboard
@@ -30,12 +30,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <textField clipsSubviews="YES" alpha="0.80000000000000004" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="contraseña" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KCz-Td-5Wk">
+                            <textField clipsSubviews="YES" alpha="0.80000000000000004" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="contraseña" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KCz-Td-5Wk">
                                 <rect key="frame" x="140" y="424" width="115" height="28"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                 <connections>
                                     <action selector="slideFrameDown" destination="HwH-Vp-uYK" eventType="editingDidEnd" id="Y2e-LG-J0C"/>
@@ -43,19 +43,25 @@
                                     <action selector="textFieldReturn:" destination="HwH-Vp-uYK" eventType="editingDidEndOnExit" id="yBE-V1-srG"/>
                                 </connections>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="226-SN-hgY">
-                                <rect key="frame" x="246" y="416" width="54" height="44"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="226-SN-hgY">
+                                <rect key="frame" x="263" y="417" width="21" height="44"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="21" id="1GX-Ba-1s6"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="15"/>
                                 <state key="normal" title=">>">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                             </button>
-                            <textField clipsSubviews="YES" alpha="0.79999999999999982" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" placeholder="usuario" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Lyx-uG-gYM">
+                            <textField clipsSubviews="YES" alpha="0.79999999999999982" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" placeholder="usuario" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Lyx-uG-gYM">
                                 <rect key="frame" x="20" y="424" width="115" height="28"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="28" id="tIF-87-7iD"/>
+                                </constraints>
                                 <color key="textColor" red="1" green="1" blue="0.99084739963503654" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <textInputTraits key="textInputTraits"/>
@@ -67,6 +73,21 @@
                             </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="KCz-Td-5Wk" firstAttribute="width" secondItem="Lyx-uG-gYM" secondAttribute="width" id="1dK-tu-I58"/>
+                            <constraint firstAttribute="bottom" secondItem="226-SN-hgY" secondAttribute="bottom" constant="20" symbolic="YES" id="5si-Ih-JYn"/>
+                            <constraint firstAttribute="trailing" secondItem="226-SN-hgY" secondAttribute="trailing" constant="36" id="BZQ-Sb-xOW"/>
+                            <constraint firstItem="226-SN-hgY" firstAttribute="centerY" secondItem="KCz-Td-5Wk" secondAttribute="centerY" id="BrS-6k-o8B"/>
+                            <constraint firstAttribute="bottom" secondItem="Lyx-uG-gYM" secondAttribute="bottom" constant="28" id="CL8-2G-TDE"/>
+                            <constraint firstItem="Lyx-uG-gYM" firstAttribute="baseline" secondItem="KCz-Td-5Wk" secondAttribute="baseline" id="MrH-b1-19q"/>
+                            <constraint firstItem="KCz-Td-5Wk" firstAttribute="top" secondItem="Lyx-uG-gYM" secondAttribute="top" id="NR1-84-FP4"/>
+                            <constraint firstItem="KCz-Td-5Wk" firstAttribute="baseline" secondItem="226-SN-hgY" secondAttribute="baseline" id="UDZ-mx-i41"/>
+                            <constraint firstItem="KCz-Td-5Wk" firstAttribute="leading" secondItem="Lyx-uG-gYM" secondAttribute="trailing" constant="5" id="hRd-aN-QKs"/>
+                            <constraint firstItem="KCz-Td-5Wk" firstAttribute="bottom" secondItem="Lyx-uG-gYM" secondAttribute="bottom" id="jkw-4Y-9FL"/>
+                            <constraint firstItem="KCz-Td-5Wk" firstAttribute="leading" secondItem="Lyx-uG-gYM" secondAttribute="trailing" constant="5" id="m8w-X0-nCo"/>
+                            <constraint firstItem="226-SN-hgY" firstAttribute="leading" secondItem="KCz-Td-5Wk" secondAttribute="trailing" constant="8" symbolic="YES" id="tnW-xZ-LWa"/>
+                            <constraint firstItem="Lyx-uG-gYM" firstAttribute="leading" secondItem="hZ8-6B-oSo" secondAttribute="leading" constant="20" symbolic="YES" id="wDY-op-CGP"/>
+                        </constraints>
                     </view>
                     <extendedEdge key="edgesForExtendedLayout"/>
                     <navigationItem key="navigationItem" id="hpg-je-OLp"/>
@@ -91,6 +112,9 @@
                 <relationship kind="outlet" name="textFieldPassword" candidateClass="UITextField"/>
                 <relationship kind="outlet" name="textFieldUsuario" candidateClass="UITextField"/>
             </relationships>
+        </class>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
         </class>
     </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
