--- a/ios-clientes/Base.lproj/Main.storyboard
+++ b/ios-clientes/Base.lproj/Main.storyboard
@@ -31,11 +31,15 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <textField clipsSubviews="YES" alpha="0.69999999999999996" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="contraseña" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KCz-Td-5Wk">
-                                <rect key="frame" x="140" y="424" width="115" height="28"/>
+                                <rect key="frame" x="131" y="425" width="107" height="28"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="28" id="1ER-pH-kwp"/>
+                                    <constraint firstAttribute="width" constant="107" id="Tda-ba-fGm"/>
+                                </constraints>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                 <connections>
                                     <action selector="slideFrameDown" destination="HwH-Vp-uYK" eventType="editingDidEnd" id="Y2e-LG-J0C"/>
@@ -43,27 +47,30 @@
                                     <action selector="textFieldReturn:" destination="HwH-Vp-uYK" eventType="editingDidEndOnExit" id="yBE-V1-srG"/>
                                 </connections>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="226-SN-hgY">
-                                <rect key="frame" x="263" y="417" width="21" height="44"/>
+                            <button opaque="NO" alpha="0.69999999999999996" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="226-SN-hgY">
+                                <rect key="frame" x="242" y="425" width="58" height="28"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.30798532209319146" green="0.80548469387755106" blue="0.071899233846048488" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="21" id="1GX-Ba-1s6"/>
+                                    <constraint firstAttribute="height" constant="27" id="5Q7-Hs-oG8"/>
+                                    <constraint firstAttribute="width" constant="58" id="kOk-iN-e0n"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="15"/>
-                                <state key="normal" title=">>">
+                                <state key="normal" title="Entrar">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                             </button>
-                            <textField clipsSubviews="YES" alpha="0.69999999999999996" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" placeholder="usuario" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Lyx-uG-gYM">
-                                <rect key="frame" x="20" y="424" width="115" height="28"/>
+                            <textField clipsSubviews="YES" alpha="0.69999999999999996" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" placeholder="usuario" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Lyx-uG-gYM" customClass="BVRutTextField">
+                                <rect key="frame" x="20" y="425" width="107" height="28"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="28" id="tIF-87-7iD"/>
+                                    <constraint firstAttribute="height" constant="28" id="rp3-la-rVC"/>
+                                    <constraint firstAttribute="width" constant="107" id="x77-Ck-Zgb"/>
                                 </constraints>
                                 <color key="textColor" red="1" green="1" blue="0.99084739963503654" alpha="1" colorSpace="calibratedRGB"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <textInputTraits key="textInputTraits"/>
                                 <connections>
                                     <action selector="slideFrameDown" destination="HwH-Vp-uYK" eventType="editingDidEnd" id="OPN-NX-TZS"/>
@@ -74,25 +81,19 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="KCz-Td-5Wk" firstAttribute="width" secondItem="Lyx-uG-gYM" secondAttribute="width" id="1dK-tu-I58"/>
-                            <constraint firstAttribute="bottom" secondItem="226-SN-hgY" secondAttribute="bottom" constant="20" symbolic="YES" id="5si-Ih-JYn"/>
-                            <constraint firstAttribute="trailing" secondItem="226-SN-hgY" secondAttribute="trailing" constant="36" id="BZQ-Sb-xOW"/>
-                            <constraint firstItem="226-SN-hgY" firstAttribute="centerY" secondItem="KCz-Td-5Wk" secondAttribute="centerY" id="BrS-6k-o8B"/>
-                            <constraint firstAttribute="bottom" secondItem="Lyx-uG-gYM" secondAttribute="bottom" constant="28" id="CL8-2G-TDE"/>
-                            <constraint firstItem="Lyx-uG-gYM" firstAttribute="baseline" secondItem="KCz-Td-5Wk" secondAttribute="baseline" id="MrH-b1-19q"/>
-                            <constraint firstItem="KCz-Td-5Wk" firstAttribute="top" secondItem="Lyx-uG-gYM" secondAttribute="top" id="NR1-84-FP4"/>
-                            <constraint firstItem="KCz-Td-5Wk" firstAttribute="baseline" secondItem="226-SN-hgY" secondAttribute="baseline" id="UDZ-mx-i41"/>
-                            <constraint firstItem="KCz-Td-5Wk" firstAttribute="leading" secondItem="Lyx-uG-gYM" secondAttribute="trailing" constant="5" id="hRd-aN-QKs"/>
-                            <constraint firstItem="KCz-Td-5Wk" firstAttribute="bottom" secondItem="Lyx-uG-gYM" secondAttribute="bottom" id="jkw-4Y-9FL"/>
-                            <constraint firstItem="KCz-Td-5Wk" firstAttribute="leading" secondItem="Lyx-uG-gYM" secondAttribute="trailing" constant="5" id="m8w-X0-nCo"/>
-                            <constraint firstItem="226-SN-hgY" firstAttribute="leading" secondItem="KCz-Td-5Wk" secondAttribute="trailing" constant="8" symbolic="YES" id="tnW-xZ-LWa"/>
-                            <constraint firstItem="Lyx-uG-gYM" firstAttribute="leading" secondItem="hZ8-6B-oSo" secondAttribute="leading" constant="20" symbolic="YES" id="wDY-op-CGP"/>
+                            <constraint firstItem="Lyx-uG-gYM" firstAttribute="leading" secondItem="hZ8-6B-oSo" secondAttribute="leading" constant="20" id="303-zk-CoG"/>
+                            <constraint firstAttribute="bottom" secondItem="KCz-Td-5Wk" secondAttribute="bottom" constant="27" id="DxY-af-Yfa"/>
+                            <constraint firstAttribute="bottom" secondItem="Lyx-uG-gYM" secondAttribute="bottom" constant="27" id="UZf-HM-Bv4"/>
+                            <constraint firstItem="KCz-Td-5Wk" firstAttribute="leading" secondItem="Lyx-uG-gYM" secondAttribute="trailing" constant="4" id="Z2H-a2-xN8"/>
+                            <constraint firstAttribute="bottom" secondItem="226-SN-hgY" secondAttribute="bottom" constant="28" id="txA-Tx-3yp"/>
+                            <constraint firstItem="226-SN-hgY" firstAttribute="leading" secondItem="KCz-Td-5Wk" secondAttribute="trailing" constant="4" id="ygI-bj-Qpr"/>
                         </constraints>
                     </view>
                     <extendedEdge key="edgesForExtendedLayout"/>
                     <navigationItem key="navigationItem" id="hpg-je-OLp"/>
                     <simulatedOrientationMetrics key="simulatedOrientationMetrics"/>
                     <connections>
+                        <outlet property="UIButtonEntrar" destination="226-SN-hgY" id="u6C-Ti-vHr"/>
                         <outlet property="textFieldPassword" destination="KCz-Td-5Wk" id="gp7-Xj-b1x"/>
                         <outlet property="textFieldUsuario" destination="Lyx-uG-gYM" id="07G-hs-5Ac"/>
                     </connections>
@@ -109,8 +110,17 @@
                 <relationship kind="action" name="slideFrameDown"/>
                 <relationship kind="action" name="slideFrameUp"/>
                 <relationship kind="action" name="textFieldReturn:"/>
+                <relationship kind="outlet" name="UIButtonEntrar" candidateClass="UIButton"/>
                 <relationship kind="outlet" name="textFieldPassword" candidateClass="UITextField"/>
                 <relationship kind="outlet" name="textFieldUsuario" candidateClass="UITextField"/>
+            </relationships>
+        </class>
+        <class className="BVRutTextField" superclassName="UITextField">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BVRutTextField.h"/>
+            <relationships>
+                <relationship kind="action" name="editBegin:"/>
+                <relationship kind="action" name="editChangeEnd:"/>
+                <relationship kind="action" name="editDidEnd:"/>
             </relationships>
         </class>
         <class className="NSLayoutConstraint" superclassName="NSObject">
